# humble

./: .gitignore  AUTHOR  Humble.py  INDEX.md  LICENSE  README.md  all.sh  eratosthenes.scm  example.scm  ext_nc.py  humble.py  io_test  io_test.scm  mics.py  snake.scm  test.scm  test_humble.py  test_mics.py
examples/: eratosthenes.scm
import_test/: bar  bar.scm  foo  foo.hum  foo.scm  main  main.hum  main.scm
src/: CMakeLists.txt  Hcurses.cpp  README.md  api.hpp  compx.cpp  compx.hpp  cons.cpp  cons.hpp  debug.cpp  debug.hpp  detail.hpp  dl.hpp  dl_curses.cpp  eval.cpp  eval.hpp  except.cpp  except.hpp  fun_impl.cpp  fun_impl.hpp  functions.cpp  functions.hpp  io_functions.cpp  io_functions.hpp  macros.cpp  macros.hpp  main.cpp  manifest.txt  parse.cpp  parse.hpp  test_compx.cpp  test_cons.cpp  test_eval.cpp  test_parse.cpp  test_tok.cpp  test_utf.cpp  test_vars.cpp  test_xeval.cpp  tok.cpp  tok.hpp  top.cpp  (+10 more)
